# competitive-programming

./: .gitignore  CMakeLists.txt  LICENSE  README.md
beecrowd/1001-extremely-basic/: extremely-basic.cpp
beecrowd/1003-simple-sum/: simple-sum.cpp
beecrowd/1007-difference/: difference.cpp
beecrowd/1009-salary-with-bonus/: salary-with-bonus.cpp
beecrowd/1010-simple-calculate/: simple-calculate.cpp
beecrowd/1011-sphere/: sphere.cpp
beecrowd/1015-distance-between-two-points/: distance-between-two-points.cpp
beecrowd/1016-distance/: distance.cpp
beecrowd/1018-banknotes/: banknotes.cpp
beecrowd/1020-age-in-days/: age-in-days.cpp
beecrowd/1021-banknotes-and-coins/: banknotes-and-coins.cpp
beecrowd/1036-bhaskaras-formula/: bhaskaras-formula.cpp
beecrowd/1037-interval/: interval.cpp
beecrowd/1040-average-3/: average-3.cpp
beecrowd/1041-coordinates-of-a-point/: coordinates-of-a-point.cpp
beecrowd/1048-salary-increase/: salary-increase.cpp
beecrowd/1049-animal/: animal.cpp
beecrowd/1050-ddd/: ddd.cpp
beecrowd/1059-even-numbers/: even-numbers.cpp
beecrowd/1064-positives-and-average/: positives-and-average.cpp
beecrowd/1070-six-odd-numbers/: six-odd-numbers.cpp
beecrowd/1071-sum-of-consecutive-odd-numbers-1/: sum-of-consecutive-odd-numbers-1.cpp
beecrowd/1074-even-or-odd/: even-or-odd.cpp
beecrowd/1078-multiplication-table/: multiplication-table.cpp
beecrowd/1080-highest-and-position/: highest-and-position.cpp
beecrowd/1094-experiments/: experiments.cpp
beecrowd/1095-sequence-ij-1/: sequence-ij-1.cpp
beecrowd/1142-pum/: pum.cpp
(+93 files in other folders)
